--- a/cvatividade.html
+++ b/cvatividade.html
@@ -4,18 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <title>Exemplo 1 - Tag Semantica</title>
 </head>
 
 <body>
     <header>
-        <h1>Bruno Circhia</h1>
-        <ul>
-            <li>E-mail: <a href="mailto: brunobiazon@alunos.utfpr.edu.br">brunobiazon@alunos.utfpr.edu.br</a> </li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/bruno-circhia-biazon-176b822ba/">https://www.linkedin.com/in/bruno-circhia-biazon-176b822ba/</a> |</li>
-            <li>Cornélio Procópio,Paraná</li>
-            </ul>
+        <h1>Bruno Circhia Biazon</h1>
+        <h2></h2>
     </header>
     <section>
         <h1>Resumo</h1>
@@ -51,9 +47,11 @@
         </ul>
     </section>
     <section>
-        <h1>Links Adicionais</h1>
+        <h1>Contato</h1>
         <ul>
-            <il><a href="https://github.com/BrunoBiazon">• Perfil do GitHub</a> </il>
+            <il><a href="https://github.com/BrunoBiazon">• Perfil do GitHub</a><br></il>
+            <il>>E-mail: <a href="mailto: brunobiazon@alunos.utfpr.edu.br">brunobiazon@alunos.utfpr.edu.br</a><br></il>
+            <il>LinkedIn: <a href="https://www.linkedin.com/in/bruno-circhia-biazon-176b822ba/">https://www.linkedin.com/in/bruno-circhia-biazon-176b822ba/</a></il>
         </ul>
     </section>
     <footer>
