--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="fotocv.jpg" alt="foto">
+        <img class="fotocv" src="fotocv.jpg" alt="foto">
         <h1>Bruno Circhia Biazon</h1>
         <h2></h2>
     </header>
