--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <header>
-        <img class="fotocv" src="fotocv.jpg" alt="foto">
+        <div>
+            <img class="fotocv" src="fotocv.jpg" alt="foto">
+        </div>
         <h1>Bruno Circhia Biazon</h1>
         <h2></h2>
     </header>
